--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -11,12 +11,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/id_prev_effect"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="50dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/id_post_effect"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="80dp"
         android:layout_alignParentBottom="true"/>
 
 
