--- a/app/src/main/res/layout/item_effect.xml
+++ b/app/src/main/res/layout/item_effect.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_effect_item_background"
     android:layout_width="80dp"
-    android:layout_height="90dp"
+    android:layout_height="match_parent"
     android:layout_margin="5dp"
-    android:background="#333">
+    android:background="#ddd">
 
     <TextView
         android:id="@+id/id_effect_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:text="灰度"/>
 
 </RelativeLayout>
